--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ikad-node",
+  "name": "ecosphere-prime-smart-app",
   "version": "1.0.0",
   "description": "",
   "author": "HbarSuite",
